# Agentic-Trading-Bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
EndPoints/: apiendpoints.py
Exception/: exceptions.py
Logs/: logger.py
configfiles/: config.yaml
src/agents/: graph.py
src/data_ingestion_pipe/: ingestion_pipeline.py
src/data_models/: models.py
src/toolkit/: tools.py
src/utils/: config_loader.py  model_loader.py
staticUI/: streamlitui.py
